--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,14 @@
-
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+  "builds": [
+      {
+          "src": "*.py",
+          "use": "@vercel/python"
+      }
+  ],
+  "routes": [
+      {
+          "src": "(.*)",
+          "dest": "app.py"
+      }
   ]
 }
